--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="background_music">Background music</string>
     <string name="sound_effect">Sound effect</string>
     <string name="avatar">Avatar</string>
+    <string name="sound">Sound</string>
 </resources>
