Fixing exit button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="sound">Sound</string>
     <string name="txt_highscore">TXT_HIGHSCORE</string>
     <string name="txt_rules">TXT_RULES</string>
+    <string name="button">Button</string>
+    <string name="rules_text">Rules_Text</string>
+    <string name="sound_on_off">Sound on/off</string>
+    <string name="background_sound_on_off">Background sound on/off</string>
+    <string name="rules_for_catch_game">Rules for Catch game</string>
 </resources>
