Sign In and Sign out features

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="background_sound_on_off">Background sound on/off</string>
     <string name="rules_for_catch_game">Rules for Catch game</string>
     <string name="sound_on_off">Sound on/off</string>
+    <string name="sign_out">Sign Out</string>
 </resources>
